<resources>
    <string name="app_name" translatable="false">MuM\'s Fit</string>
    <string name="settings_language">Language</string>
    <string name="settings_color">Color</string>
    <string name="settings_darkTheme">Dark Theme</string>
    <string name="settings_lightTheme">Light Theme</string>
    <string name="settings_defaultTheme">Default Theme</string>
    <string name="settings_langGER">German</string>
    <string name="settings_langENG">English</string>
    <string name="settings_save">Save</string>
    <string name="alert_createPlanTitle">Create a new plan:</string>
    <string name="alert_createPlanName">Name of your plan:</string>
    <string name="cancel">Cancel</string>
    <string name="toast_errorEnterName">Please enter a name!</string>
    <string name="toast_errorNameExists">A plan with this name already exists</string>
    <string name="toast_exitApp">Press again to exit!</string>
    <string name="alert_deletePlanTitle">Delete for sure?</string>
    <string name="alert_deletePlanMessage">Do you really want to delete this plan permanently?</string>
    <string name="alert_editPlanTitle">Edit Plan</string>
    <string name="alert_editPlanMessage">Change name:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_selectAll">Select All</string>
    <string name="menu_details">Details</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_analyze">Analyze</string>
    <string name="alert_planInfoCreated">Created on:</string>
    <string name="alert_planInfoExecuted">Last execution:</string>
    <string name="alert_savePlanTitle">Save</string>
    <string name="alert_savePlanMessage">Do you wish to save the plan?\nIt can still be edited later.</string>
    <string name="alert_addSplitTitle">Add a training day</string>
    <string name="alert_addSplitMessage">Name of the day:</string>
    <string name="alert_addExerciseTitle">Add exercise</string>
    <string name="alert_addExerciseMessage">New exercise:</string>
    <string name="hint_name">Name of the exercise</string>
    <string name="hint_reps">Repetitions</string>
    <string name="hint_weight">Starting weight</string>
    <string name="alert_cancelAddingTitle">Cancel adding new plan?</string>
    <string name="alert_cancelAddingMessage">Do you really want to cancel adding a new plan? \nAll changes will get lost!</string>
    <string name="yes">Yes</string>
    <string name="alert_deleteExerciseTitle">Delete exercise</string>
    <string name="alert_deleteExerciseMessage">Do you really want to delete this exercise? \nThis can not be undone!</string>
    <string name="alert_editExerciseTitle">Edit exercise</string>
    <string name="alert_editExerciseMessage">Edit exercise:</string>
    <string name="hint_split">Training day</string>
    <string name="menu_start">Start training</string>
    <string name="analyze_graphHorizontal">Training day</string>
    <string name="analyze_graphVertical">Weight</string>
    <string name="excercise_name_perform">Exercise:</string>
    <string name="errorEnterAll">Please enter all information</string>
    <string name="errorEnterStart">Please enter a starting weight</string>
    <string name="errorNoExcercises">Add exercises to start the training</string>
    <string name="errorNoExcercisesAnalyse">Please add excercises to analyse</string>
    <string name="menu_import">Import</string>
    <string name="saved">Saved</string>
    <string name="actionMode_selected">selected</string>
    <string name="toast_errorFillWeight">Please fill in the weight</string>
    <string name="fileChooserTitle">Select a file!</string>
    <string name="toast_noPermissions">You need to grant the application the permission to write to storage</string>
    <string name="toast_fileChooser">Please install a File Manger!</string>
    <string name="toast_permissionsGranted">Permissions granted! You can export your plan now!</string>
</resources>