<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_select_all"
        android:icon="?attr/actionModeSelectAllDrawable"
        android:showAsAction="always"
        android:title="@string/menu_selectAll"
        android:titleCondensed="Select All"
        android:visible="false">
    </item>

    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/menu_delete"
        android:titleCondensed="Delete"
        android:visible="false">
    </item>

    <item
        android:id="@+id/item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/menu_share"
        android:titleCondensed="Share"
        android:visible="false">
    </item>

    <item
        android:id="@+id/item_details"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_details"
        android:titleCondensed="Details"
        android:visible="false">
    </item>

    <item
        android:id="@+id/item_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_edit"
        android:titleCondensed="Edit"
        android:visible="false">
    </item>

    <item
        android:id="@+id/item_analyze"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_analyze"
        android:titleCondensed="Analyze"
        android:visible="false">
    </item>
</menu>