<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_start_training"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/menu_start"
        android:titleCondensed="Start Training"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/item_edit_menu"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit"
        android:titleCondensed="Edit"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/item_details_menu"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_details"
        android:titleCondensed="Details"
        app:showAsAction="ifRoom|withText"></item>
</menu>